// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModulesSection component should render a ModuleSection component with token and gauges 1`] = `
<div
  className="admin-box"
>
  <SectionTitle
    annotation="Missing translation: administration.annotation"
    title="Missing translation: administration.voteSession.1"
  />
  <div
    className="admin-content"
  >
    <div
      className="form-container"
    >
      <div
        className="vote-modules-form"
      >
        <Checkbox
          bsClass="checkbox"
          checked={false}
          disabled={false}
          inline={false}
          onChange={[Function]}
          title=""
        >
          <Helper
            additionalTextClasses=""
            classname="inline checkbox-title"
            helperText="Missing translation: administration.tokenVoteCheckbox"
            helperUrl="/static2/img/helpers/helper4.png"
            label="Missing translation: administration.voteWithTokens"
          />
        </Checkbox>
        Immutable.List [
        ]
        <div
          className="separator"
        />
        <Checkbox
          bsClass="checkbox"
          checked={true}
          disabled={false}
          inline={false}
          onChange={[Function]}
          title=""
        >
          <Helper
            additionalTextClasses=""
            classname="inline checkbox-title"
            helperText="Missing translation: administration.gaugeVoteCheckbox"
            helperUrl="/static2/img/helpers/helper3.png"
            label="Missing translation: administration.voteWithGauges"
          />
        </Checkbox>
        <div
          className="module-form-margin"
        >
          <div
            className="flex"
          >
            <label
              htmlFor="input-dropdown-addon"
            >
              <Translate
                value="administration.gaugeNumber"
              />
            </label>
            <Helper
              additionalTextClasses=""
              classname=""
              helperText="Missing translation: administration.defineGaugeNumer"
              helperUrl="/static2/img/helpers/helper2.png"
              label=""
            />
          </div>
          <SplitButton
            id="input-dropdown-addon"
            onSelect={[Function]}
            required={true}
            title={1}
          >
            <MenuItem
              bsClass="dropdown"
              disabled={false}
              divider={false}
              eventKey={1}
              header={false}
            >
              1
            </MenuItem>
            <MenuItem
              bsClass="dropdown"
              disabled={false}
              divider={false}
              eventKey={2}
              header={false}
            >
              2
            </MenuItem>
            <MenuItem
              bsClass="dropdown"
              disabled={false}
              divider={false}
              eventKey={3}
              header={false}
            >
              3
            </MenuItem>
            <MenuItem
              bsClass="dropdown"
              disabled={false}
              divider={false}
              eventKey={4}
              header={false}
            >
              4
            </MenuItem>
            <MenuItem
              bsClass="dropdown"
              disabled={false}
              divider={false}
              eventKey={5}
              header={false}
            >
              5
            </MenuItem>
            <MenuItem
              bsClass="dropdown"
              disabled={false}
              divider={false}
              eventKey={6}
              header={false}
            >
              6
            </MenuItem>
            <MenuItem
              bsClass="dropdown"
              disabled={false}
              divider={false}
              eventKey={7}
              header={false}
            >
              7
            </MenuItem>
            <MenuItem
              bsClass="dropdown"
              disabled={false}
              divider={false}
              eventKey={8}
              header={false}
            >
              8
            </MenuItem>
            <MenuItem
              bsClass="dropdown"
              disabled={false}
              divider={false}
              eventKey={9}
              header={false}
            >
              9
            </MenuItem>
            <MenuItem
              bsClass="dropdown"
              disabled={false}
              divider={false}
              eventKey={10}
              header={false}
            >
              10
            </MenuItem>
          </SplitButton>
        </div>
        Immutable.List [
          <Connect(DumbGaugeForm)
            editLocale="en"
            id="my-num-gauge"
            index={0}
          />,
        ]
        <div
          className="margin-m"
        >
          <label
            htmlFor="seeCurrentVotes"
          >
            <Translate
              value="administration.seeCurrentVotes"
            />
          </label>
          <Radio
            bsClass="radio"
            checked={true}
            disabled={false}
            id="seeCurrentVotes"
            inline={false}
            name="seeCurrentVotes"
            onChange={[Function]}
            title=""
          >
            <Translate
              value="yes"
            />
          </Radio>
          <Radio
            bsClass="radio"
            checked={false}
            disabled={false}
            inline={false}
            name="seeCurrentVotes"
            onChange={[Function]}
            title=""
          >
            <Translate
              value="no"
            />
          </Radio>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ModulesSection component should render a ModulesSection component without any TokensForm nor GaugeForm 1`] = `
<div
  className="admin-box"
>
  <SectionTitle
    annotation="Missing translation: administration.annotation"
    title="Missing translation: administration.voteSession.1"
  />
  <div
    className="admin-content"
  >
    <div
      className="form-container"
    >
      <div
        className="vote-modules-form"
      >
        <Checkbox
          bsClass="checkbox"
          checked={false}
          disabled={false}
          inline={false}
          onChange={[Function]}
          title=""
        >
          <Helper
            additionalTextClasses=""
            classname="inline checkbox-title"
            helperText="Missing translation: administration.tokenVoteCheckbox"
            helperUrl="/static2/img/helpers/helper4.png"
            label="Missing translation: administration.voteWithTokens"
          />
        </Checkbox>
        Immutable.List [
        ]
        <Checkbox
          bsClass="checkbox"
          checked={false}
          disabled={false}
          inline={false}
          onChange={[Function]}
          title=""
        >
          <Helper
            additionalTextClasses=""
            classname="inline checkbox-title"
            helperText="Missing translation: administration.gaugeVoteCheckbox"
            helperUrl="/static2/img/helpers/helper3.png"
            label="Missing translation: administration.voteWithGauges"
          />
        </Checkbox>
        Immutable.List [
        ]
      </div>
    </div>
  </div>
</div>
`;
